--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,8 @@ typings/
 # Next.js build output
 .next
 
+build
+
 # Nuxt.js build / generate output
 .nuxt
 dist
@@ -102,3 +104,6 @@ dist
 
 # TernJS port file
 .tern-port
+
+.idea/
+.DS_Store
